--- a/RTC.mxo/Contents/Info.plist
+++ b/RTC.mxo/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>12F45</string>
+	<string>13A603</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
@@ -25,18 +25,18 @@
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>DTCompiler</key>
-	<string>com.apple.compilers.llvmgcc42</string>
+	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>4H1503</string>
+	<string>5A3005</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>12F45</string>
+	<string>13A595</string>
 	<key>DTSDKName</key>
-	<string></string>
+	<string>macosx10.9</string>
 	<key>DTXcode</key>
-	<string>0463</string>
+	<string>0502</string>
 	<key>DTXcodeBuild</key>
-	<string>4H1503</string>
+	<string>5A3005</string>
 </dict>
 </plist>
